Style the table using Bootstrap, fix the table alignment

--- a/web-server/pdf-export/client/app/index.css
+++ b/web-server/pdf-export/client/app/index.css
@@ -17,10 +17,3 @@
  *  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  *  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-
-:root {
-    --md-ref-typeface-brand: 'Lato';
-    --md-ref-typeface-plain: 'Lato';
-}
